[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vuln-analyzer"
version = "0.1.0"
description = "CLI tool for vulnerability analysis using CVE, PURL, or CPE"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "pandas>=2.0.0",
    "jsonschema>=4.0.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.65.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
vuln-analyzer = "vuln_analyzer.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 