[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnanalyzer"
version = "0.1.0"
description = "vulnerability analysis tool for CVE, PURL, CPE, and wildcard searches"
readme = "README.md"
requires-python = ">=3.9"


dependencies = [
    "pandas>=2.0.0",
    "jsonschema>=4.0.0",
    "python-dateutil>=2.8.0",
    "tqdm>=4.65.0",
    "packaging>=23.0",
    "requests>=2.25.0",
    "tabulate>=0.9.0",
]

[tool.hatch.build]
sources = ["src"] 